# AnyEduStack2

./: Dockerfile  Makefile  README.md  TechStack.md  pyproject.toml
data/: customers.parquet  orders.parquet  products.parquet
src/data/: generate_data.py  read_data.py
